# rustgecko

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  test.yml
src/: client.rs  geckoclient.rs  lib.rs  main.rs
src/model/: apimodels.rs  coins.rs  common.rs  exchangerates.rs  global.rs  mod.rs  queryparams.rs  responses.rs  simple.rs
