[package]
authors = ["Florian Findelsberger"]
name = "rustgecko"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Simple SDK for Coingecko API"
repository = "https://github.com/ffindelsberger/rustgecko"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
serde_path_to_error = "0.1.8"
log = "0.4.0"
env_logger = "0.9.3"
serde_with = "2.1.0"

[dev-dependencies]
serial_test = "0.10.0"
tokio = { version = "1.23.0", features = ["macros"] }



